# RaiSim_Project

./: .gitignore  CMakeLists.txt  README.md
backup/: CMakeLists_backup.txt  CMakeLists_renewal.txt
controller/include/: ConvexMPC.hpp  HOQP.hpp  HOQP_Slack.hpp  IOsqpEigenSolver.hpp  InverseDynamicsQPSolver.hpp  OsqpEigenSolver.hpp  RobotParams.hpp  includeTest.hpp  wholeBodyController.hpp
controller/include/tasks/: TaskLS.hpp  TaskLS_ID.hpp  TaskLS_MoveBase.hpp  TaskLS_StationaryFeet.hpp  TaskSet.hpp
controller/include/tasks/Equality/: TaskLS_AngularMomentum.hpp  TaskLS_EnergyOpt.hpp  TaskLS_ID.hpp  TaskLS_LinearMomentum.hpp  TaskLS_MinMotion.hpp  TaskLS_MoveBase.hpp  TaskLS_StationaryEE.hpp  TaskLS_StationaryFeet.hpp
controller/include/tasks/Inequality/: TaskLS_FrictionCone.hpp  TaskLS_TorqueLimits.hpp
controller/src/: ConvexMPC.cpp  HOQP.cpp  HOQP_Slack.cpp  InverseDynamicsQPSolver.cpp  OsqpEigenSolver.cpp  includeTest.cpp
controller/src/tasks/: TaskLS.cpp  TaskLS_ID.cpp  TaskLS_MoveBase.cpp  TaskLS_StationaryFeet.cpp  TaskSet.cpp
controller/src/tasks/Equality/: TaskLS_AngularMomentum.cpp  TaskLS_EnergyOpt.cpp  TaskLS_ID.cpp  TaskLS_LinearMomentum.cpp  TaskLS_MinMotion.cpp  TaskLS_MoveBase.cpp  TaskLS_StationaryEE.cpp  TaskLS_StationaryFeet.cpp
controller/src/tasks/Inequality/: TaskLS_FrictionCone.cpp  TaskLS_TorqueLimits.cpp
robot/include/: RobotState.hpp  RobotStateRaisim.hpp
robot/src/: RobotState.cpp  RobotStateRaisim.cpp
rsc/b1/: b1.urdf
rsc/b2/urdf/: b2.urdf  b2_z1.urdf
rsc/go1/: go1.urdf
rsc/go2/: go2.urdf
rsc/laikago/: laikago.urdf
rsc/slope/: pannel.mtl  slope.stl  slope.urdf
rsc/z1/: aliengo_z1.urdf  aliengo_z1_obj.urdf  go1z1.urdf  z1.urdf
test/: base_qp.cpp  bezier_test.cpp  convex_mpc.cpp  hoqp_slack_test.cpp  hoqp_test.cpp  id_osc.cpp  id_test.cpp  jointImpedance.cpp  joint_impedance.cpp  linear_momentum_test.cpp  momentum_test.cpp  nullspace_control.cpp  osc.cpp  osqp_test.cpp  robot_state_test.cpp  slope_test.cpp  taskHOQP.cpp  utils_test.cpp  wbc_legged_arm.cpp  z1_spawn.cpp
utils/: Utils.cpp  Utils.hpp
yaml/: momentum_test.yaml
